# Cpp-prods

./: .gitignore  README.md
phase-01-fundamentals/: README.md
phase-01-fundamentals/01-cli-pnl-calculator/: CMakeLists.txt  README.md  TUTORIAL.md
phase-01-fundamentals/01-cli-pnl-calculator/include/: pnl_calculator.hpp
phase-01-fundamentals/01-cli-pnl-calculator/src/: main.cpp
phase-01-fundamentals/01-cli-pnl-calculator/tests/: test_pnl.cpp
phase-01-fundamentals/04-price-series-lab/: CMakeLists.txt  README.md  TUTORIAL.md
phase-01-fundamentals/04-price-series-lab/include/: price_series.hpp
phase-01-fundamentals/04-price-series-lab/src/: main.cpp
phase-01-fundamentals/04-price-series-lab/tests/: test_price_series.cpp
phase-02-memory/01-order-book-memory-map/: CMakeLists.txt  README.md  TUTORIAL.md
phase-02-memory/01-order-book-memory-map/include/: order_entry.hpp
phase-02-memory/01-order-book-memory-map/src/: main.cpp
phase-02-memory/01-order-book-memory-map/tests/: test_order_entry.cpp
phase-02-memory/02-tick-buffer-lifetime-lab/: CMakeLists.txt  README.md  TUTORIAL.md
phase-02-memory/02-tick-buffer-lifetime-lab/include/: tick_buffer.hpp
phase-02-memory/02-tick-buffer-lifetime-lab/src/: main.cpp
phase-02-memory/02-tick-buffer-lifetime-lab/tests/: test_tick_buffer.cpp
phase-02-memory/03-risk-engine-reference-vs-pointer/: CMakeLists.txt  README.md  TUTORIAL.md
phase-02-memory/03-risk-engine-reference-vs-pointer/include/: risk_metrics.hpp
phase-02-memory/03-risk-engine-reference-vs-pointer/src/: main.cpp
phase-02-memory/03-risk-engine-reference-vs-pointer/tests/: test_risk_metrics.cpp
phase-02-memory/04-leak-hunt-portfolio-cache/: CMakeLists.txt  README.md  TUTORIAL.md
phase-02-memory/04-leak-hunt-portfolio-cache/include/: portfolio_cache.hpp
phase-02-memory/04-leak-hunt-portfolio-cache/src/: main.cpp
phase-02-memory/04-leak-hunt-portfolio-cache/tests/: test_portfolio_cache.cpp
phase-03-oop/02-portfolio-and-position-model/: CMakeLists.txt  README.md  TUTORIAL.md
phase-03-oop/02-portfolio-and-position-model/include/: portfolio.hpp  position.hpp
phase-03-oop/02-portfolio-and-position-model/src/: main.cpp
phase-03-oop/02-portfolio-and-position-model/tests/: test_portfolio.cpp
phase-04-stl/02-portfolio-analytics-dashboard/: CMakeLists.txt  README.md  TUTORIAL.md
phase-04-stl/02-portfolio-analytics-dashboard/include/: analytics.hpp
phase-04-stl/02-portfolio-analytics-dashboard/src/: main.cpp
phase-04-stl/02-portfolio-analytics-dashboard/tests/: test_analytics.cpp
phase-04-stl/04-factor-ranking-engine/: CMakeLists.txt  README.md  TUTORIAL.md
phase-04-stl/04-factor-ranking-engine/include/: factor_engine.hpp
phase-04-stl/04-factor-ranking-engine/src/: main.cpp
phase-04-stl/04-factor-ranking-engine/tests/: test_factor.cpp
phase-05-modern-cpp/01-smart-pointer-pricing-graph/: CMakeLists.txt  README.md  TUTORIAL.md
phase-05-modern-cpp/01-smart-pointer-pricing-graph/include/: pricing_graph.hpp
phase-05-modern-cpp/01-smart-pointer-pricing-graph/src/: main.cpp
phase-05-modern-cpp/01-smart-pointer-pricing-graph/tests/: test_graph.cpp
phase-05-modern-cpp/02-move-aware-market-data-pipeline/: CMakeLists.txt  README.md  TUTORIAL.md
phase-05-modern-cpp/02-move-aware-market-data-pipeline/include/: tick_pipeline.hpp
phase-05-modern-cpp/02-move-aware-market-data-pipeline/src/: main.cpp
phase-05-modern-cpp/02-move-aware-market-data-pipeline/tests/: test_pipeline.cpp
phase-05-modern-cpp/03-lambda-strategy-backtester/: CMakeLists.txt  README.md  TUTORIAL.md
phase-05-modern-cpp/03-lambda-strategy-backtester/include/: backtester.hpp
phase-05-modern-cpp/03-lambda-strategy-backtester/src/: main.cpp
phase-05-modern-cpp/03-lambda-strategy-backtester/tests/: test_backtester.cpp
phase-05-modern-cpp/04-constexpr-financial-math/: CMakeLists.txt  README.md  TUTORIAL.md
phase-05-modern-cpp/04-constexpr-financial-math/include/: financial_math.hpp
phase-05-modern-cpp/04-constexpr-financial-math/src/: main.cpp
phase-05-modern-cpp/04-constexpr-financial-math/tests/: test_constexpr.cpp
phase-05-modern-cpp/05-concepts-for-data-feeds/: CMakeLists.txt  README.md  TUTORIAL.md
phase-05-modern-cpp/05-concepts-for-data-feeds/include/: feed_concepts.hpp
phase-05-modern-cpp/05-concepts-for-data-feeds/src/: main.cpp
phase-05-modern-cpp/05-concepts-for-data-feeds/tests/: test_concepts.cpp
phase-06-advanced/01-template-statistics-library/: CMakeLists.txt  README.md  TUTORIAL.md
phase-06-advanced/01-template-statistics-library/include/: stats.hpp
phase-06-advanced/01-template-statistics-library/src/: main.cpp
phase-06-advanced/01-template-statistics-library/tests/: test_stats.cpp
phase-06-advanced/02-exception-safe-csv-loader/: CMakeLists.txt  README.md  TUTORIAL.md
phase-06-advanced/02-exception-safe-csv-loader/include/: csv_loader.hpp
phase-06-advanced/02-exception-safe-csv-loader/src/: main.cpp
phase-06-advanced/02-exception-safe-csv-loader/tests/: test_csv.cpp
phase-06-advanced/03-multithreaded-monte-carlo/: CMakeLists.txt  README.md  TUTORIAL.md
phase-06-advanced/03-multithreaded-monte-carlo/include/: monte_carlo.hpp
phase-06-advanced/03-multithreaded-monte-carlo/src/: main.cpp
phase-06-advanced/03-multithreaded-monte-carlo/tests/: test_mc.cpp
phase-06-advanced/04-atomic-market-data-cache/: CMakeLists.txt  README.md  TUTORIAL.md
phase-06-advanced/04-atomic-market-data-cache/include/: atomic_cache.hpp
phase-06-advanced/04-atomic-market-data-cache/src/: main.cpp
phase-07-tooling/01-cmake-professional-template/: CMakeLists.txt  CMakePresets.json  README.md  TUTORIAL.md
phase-07-tooling/04-gtest-trading-engine-suite/: CMakeLists.txt  README.md  TUTORIAL.md
phase-08-capstones/02-options-pricing-library/: CMakeLists.txt  README.md  TUTORIAL.md
phase-08-capstones/03-market-data-terminal/: CMakeLists.txt  README.md  TUTORIAL.md
phase-08-capstones/04-risk-and-var-engine/: CMakeLists.txt  README.md  TUTORIAL.md
phase-08-capstones/05-final-quant-platform/: CMakeLists.txt  README.md  TUTORIAL.md
(+109 files in other folders)
