cmake_minimum_required(VERSION 3.25)
project(tick_pipeline VERSION 1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(tick_pipeline src/main.cpp)
target_include_directories(tick_pipeline PRIVATE include)

include(FetchContent)
FetchContent_Declare(googletest GIT_REPOSITORY https://github.com/google/googletest.git GIT_TAG v1.14.0)
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()
add_executable(pipeline_tests tests/test_pipeline.cpp)
target_include_directories(pipeline_tests PRIVATE include)
target_link_libraries(pipeline_tests GTest::gtest_main)
include(GoogleTest)
gtest_discover_tests(pipeline_tests)
